# pwncli

./: .gitignore  API-DOC.md  API-doc.md  LICENSE  README-CN.md  README-EN.md  README.md  pyproject.toml  setup.cfg  setup.py
doc/: debug_cmd.md
examples/: exp.py  makefile  pwn.c  script  stackoverflow_nopie  stackoverflow_pie
pwncli/: __init__.py  cli.py
pwncli/commands/: cmd_config.py  cmd_debug.py  cmd_example.py  cmd_gadget.py  cmd_initial.py  cmd_listen.py  cmd_misc.py  cmd_patchelf.py  cmd_qemu.py  cmd_remote.py  cmd_show.py  cmd_template.py  cmd_test.py  cmd_tmux.py  cmd_update.py
pwncli/conf/: .gdbinit-gef  .gdbinit-peda  .gdbinit-pwndbg  config_data.conf
pwncli/example/: config_data.conf
pwncli/examples/: exp.py  pwn.c  stackoverflow_nopie  stackoverflow_pie
pwncli/utils/: __init__.py  bruteforce.py  cli_decorates.py  cli_misc.py  config.py  decorates.py  exceptions.py  gadgetbox.py  gdb_helper.py  io_file.py  libcbox.py  misc.py  msic.py  patcher.py  pipes.py  ropperbox.py  shellcode.py  syscall_num.py
tests/: run_all_test.sh
tests/cmd_test/: test_debug.py  test_pwncli.py
tests/sources/: flag  makefile  pwn  pwn.c
tests/util_test/: test_libcbox.py  test_misc.py
